# amsynth

./: .gitignore  CMakeLists.txt  build_linux.txt
src/: MidiController.h  Parameter.h  main.cpp  main.h
src/GUI/: Key.h  KeyDialogUpdater.cpp  KeyDialogUpdater.h  KeyHandler.cpp  KeyHandler.h  KeyLearnDialog.cpp  KeyLearnDialog.h  KeyMapper.cpp  KeyMapper.h  MIDILearnDialog.h  MainWindow.cpp  MainWindow.h  controllers.cpp  controllers.h  editor_menus.cpp  editor_pane.h
